# vk-lib

./: .clang-format  .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  triangle.cpp
examples/shaders/: compile_shaders.bat  triangle.vert
include/: vk_lib.h
include/vk_lib/: commands.h  common.h  core.h  pipelines.h  presentation.h  rendering.h  resources.h  shader_data.h  shaders.h  synchronization.h
src/: CMakeLists.txt  commands.cpp  core.cpp  pipelines.cpp  presentation.cpp  rendering.cpp  resources.cpp  shader_data.cpp  shaders.cpp  synchronization.cpp
tests/: CMakeLists.txt  core_tests.cpp
